--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
     <script type="text/javascript" src="lib/cesium/GlobePointDrawer.js"></script>
     <script type="text/javascript" src="lib/cesium/GlobeBufferLineDrawer.js"></script>
     <script type="text/javascript" src="lib/cesium/GlobePointMeasure.js"></script>
-    <script type="text/javascript" src="lib/cesium/GlobePolylineMeasure.js"></script>
+    <script type="text/javascript" src="lib/cesium/GlobePolylineSpaceMeasure.js"></script>
+    <script type="text/javascript" src="lib/cesium/GlobePolylineStickMeasure.js"></script>
     <script type="text/javascript" src="lib/cesium/GlobePolygonMeasure.js"></script>
     <script type="text/javascript" src="lib/cesium/PlotStraightArrowDrawer.js"></script>
     <script type="text/javascript" src="lib/cesium/PlotAttackArrowDrawer.js"></script>
@@ -74,7 +75,8 @@
     </div>
     <div style="position:absolute;left:10px;top:50px;background-color:transparent;">
         <input id="posMeasure" type="button" class="layui-btn layui-btn-sm" value="坐标查询" />
-        <input id="disMeasure" type="button" class="layui-btn layui-btn-sm" value="距离量算" />
+        <input id="spaceDisMeasure" type="button" class="layui-btn layui-btn-sm" value="空间距离" />
+        <input id="stickDisMeasure" type="button" class="layui-btn layui-btn-sm" value="贴地距离" />
         <input id="areaMeasure" type="button" class="layui-btn layui-btn-sm" value="面积量算" />
     </div>
     <div style="position:absolute;left:10px;top:90px;background-color:transparent;">
